incremental push of rooms api since it compiles and app runs

--- a/client/index.html
+++ b/client/index.html
@@ -188,6 +188,10 @@
           <script src="app/dashboard/my-properties/my.property.route.js"></script>
           <script src="app/dashboard/my-properties/property.details/property.details.controller.js"></script>
           <script src="app/dashboard/my-properties/property.details/property.details.route.js"></script>
+          <script src="app/dashboard/my-rooms/add.new.room/add.new.room.controller.js"></script>
+          <script src="app/dashboard/my-rooms/add.new.room/add.new.room.route.js"></script>
+          <script src="app/dashboard/my-rooms/my.rooms.controller.js"></script>
+          <script src="app/dashboard/my-rooms/my.rooms.route.js"></script>
           <script src="app/landing/landing.controller.js"></script>
           <script src="app/prerender.controller.js"></script>
           <script src="components/blocks/exception/exception-handler.js"></script>
