--- a/client/app/dashboard/my-rooms/add.new.room/add.new.room.html
+++ b/client/app/dashboard/my-rooms/add.new.room/add.new.room.html
@@ -27,28 +27,28 @@
     </div>
     <div class="col-sm-12">
       <label for="streetAddress">Address</label>
-      <input type="text" id="streetAddress" name="streetAddress" class="form-control"  placeholder="Street name" address-autocomplete="vm.property.streetAddress" ng-model="vm.property.streetAddress.streetAddress"/>
+      <input type="text" id="streetAddress" name="streetAddress" class="form-control"  placeholder="Street name" address-autocomplete="vm.property.address" ng-model="vm.property.address.streetAddress"/>
 
       <label for="streetNumber">Number</label>
-      <input type="number" id="streetNumber" name="streetNumber" class="form-control"  placeholder="Street number" ng-model="vm.property.streetAddress.streetNumeric"/>
+      <input type="number" id="streetNumber" name="streetNumber" class="form-control"  placeholder="Street number" ng-model="vm.property.address.streetNumeric"/>
 
       <label for="country">Country</label>
-      <input type="text" id="country" name="country" class="form-control"  placeholder="country" ng-model="vm.property.streetAddress.state"/>
+      <input type="text" id="country" name="country" class="form-control"  placeholder="country" ng-model="vm.property.address.state"/>
 
       <label for="city">City</label>
-      <input type="text" id="city" name="city" class="form-control"  placeholder="city" ng-model="vm.property.streetAddress.city"/>
+      <input type="text" id="city" name="city" class="form-control"  placeholder="city" ng-model="vm.property.address.city"/>
 
       <label for="zip">Zip code</label>
-      <input type="number" id="zip" name="zip" class="form-control"  placeholder="zip code" ng-model="vm.property.streetAddress.zip"/>
+      <input type="number" id="zip" name="zip" class="form-control"  placeholder="zip code" ng-model="vm.property.address.zip"/>
 
       <label for="apt">Apt</label>
-      <input type="number" id="apt" name="apt" class="form-control"  placeholder="apt" ng-model="vm.property.streetAddress.apt"/>
+      <input type="number" id="apt" name="apt" class="form-control"  placeholder="apt" ng-model="vm.property.address.apt"/>
 
       <label for="bldg">Bldg</label>
-      <input type="text" id="bldg" name="bldg" class="form-control"  placeholder="bldg" ng-model="vm.property.streetAddress.bldg"/>
+      <input type="text" id="bldg" name="bldg" class="form-control"  placeholder="bldg" ng-model="vm.property.address.bldg"/>
 
       <label for="type">Type</label>
-      <select id="type" class="form-control" data-ng-model="vm.property.streetAddress.type">
+      <select id="type" class="form-control" data-ng-model="vm.property.type">
         <option value="apt">Apt</option>
         <option value="sfh">sfh</option>
         <option value="duplex">Duplex</option>
@@ -57,38 +57,38 @@
       </select>
 
       <label for="bedrooms">Bedrooms?</label><br/>
-      <input type="number" id="bedrooms" name="bedrooms" class="form-control"  placeholder="Number of bedrooms" ng-model="vm.property.streetAddress.bedrooms"/>
+      <input type="number" id="bedrooms" name="bedrooms" class="form-control"  placeholder="Number of bedrooms" ng-model="vm.property.bedrooms"/>
 
       <label for="bathrooms">Bathrooms?</label><br/>
-      <input type="number" id="bathrooms" name="bathrooms" class="form-control"  placeholder="Number of bathrooms" ng-model="vm.property.streetAddress.bathrooms"/>
+      <input type="number" id="bathrooms" name="bathrooms" class="form-control"  placeholder="Number of bathrooms" ng-model="vm.property.bathrooms"/>
 
       <label for="parkingSpots">Parking spots?</label><br/>
-      <input type="number" id="parkingSpots" name="parkingSpots" class="form-control"  placeholder="Number of parking spots" ng-model="vm.property.streetAddress.parkingSpots"/>
+      <input type="number" id="parkingSpots" name="parkingSpots" class="form-control"  placeholder="Number of parking spots" ng-model="vm.property.parkingSpots"/>
 
       <label for="livingAreaSqFt">Living area SqFt</label><br/>
-      <input type="number" id="livingAreaSqFt" name="livingAreaSqFt" class="form-control"  placeholder="Living area sqFt" ng-model="vm.property.streetAddress.livingAreaSqFt"/>
+      <input type="number" id="livingAreaSqFt" name="livingAreaSqFt" class="form-control"  placeholder="Living area sqFt" ng-model="vm.property.livingAreaSqFt"/>
 
       <label for="hoaFee">Hoa fee</label><br/>
-      <input type="number" id="hoaFee" name="hoaFee" class="form-control"  placeholder="hoa fee" ng-model="vm.property.streetAddress.hoaFee"/>
+      <input type="number" id="hoaFee" name="hoaFee" class="form-control"  placeholder="hoa fee" ng-model="vm.property.hoaFee"/>
 
       <label for="otherFee">Other fee</label><br/>
-      <input type="number" id="otherFee" name="otherFee" class="form-control"  placeholder="other fee" ng-model="vm.property.streetAddress.otherFee"/>
+      <input type="number" id="otherFee" name="otherFee" class="form-control"  placeholder="other fee" ng-model="vm.property.otherFee"/>
 
-      <label for="status">Type</label>
-      <select id="status" class="form-control" data-ng-model="vm.property.streetAddress.status">
-        <option value="avail">Available</option>
-        <option value="pending">Pending</option>
-        <option value="rented">Rented</option>
-      </select>
+      <!--<label for="status">Type</label>-->
+      <!--<select id="status" class="form-control" data-ng-model="vm.property.status">-->
+        <!--<option value="avail">Available</option>-->
+        <!--<option value="pending">Pending</option>-->
+        <!--<option value="rented">Rented</option>-->
+      <!--</select>-->
 
       <label for="description">Property description</label>
       <textarea name="description" id="description" cols="30" rows="5" placeholder="description" data-ng-model="vm.property.description"  class="form-control" ></textarea>
 
-      <label for="picture">Upload picture</label>
-      <div fileupload data="addNewRoom.data"></div>
+      <!--<label for="picture">Upload picture</label>-->
+      <!--<div fileupload data="addNewRoom.room.picture"></div>-->
 
       <br/>
-      <button class="btn btn-primary" ng-click="addNewRoom.addNewRoom(vm.property.streetAddress)">Save new room</button>
+      <button class="btn btn-primary" ng-click="addNewRoom.create(vm.property, vm.room, vm.picture)">Save new room</button>
       <button class="btn btn-primary" ui-sref="^">Back to my rooms</button>
 
     </div>
@@ -96,5 +96,5 @@
 
 
   </div>
-  <pre>{{vm.property |json}}</pre>
+  <pre>{{vm.property |json}} {{vm.room | json}}</pre>
 </div>
