--- a/client/app/dashboard/favorites/my.favorites.html
+++ b/client/app/dashboard/favorites/my.favorites.html
@@ -1,1 +1,12 @@
-{{myFavorites.test}}
+<div ui-view="">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <h2> My Favorites</h2>
+        <div class="white-box ">
+          <h1>{{myFavorites.test}}</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
