Add Vehicle and Pets in profile page

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -8,8 +8,8 @@
           <h2> You </h2>
 
           <div class="white-box buttons-box">
-            <a class="btn btn-rented primary" ui-sref="dashboard.myProperties.addNew">Post Available Property</a>
-            <a  class="btn btn-rented secondary" ui-sref="dashboard.myProfile.addNewLooking">Post Looking</a>
+            <a class="btn btn-primary" ui-sref="dashboard.myProperties.addNew">Post Available Property</a>
+            <a  class="btn btn-secondary" ui-sref="dashboard.myProfile.addNewLooking">Post Looking</a>
           </div>
 
           <div class="white-box profile-sidebar">
@@ -33,7 +33,7 @@
               </div>
             </div>
             <!-- end message box -->
-            <a  class="btn btn-rented primary"> Views all messages </a>
+            <a  class="btn btn-primary btn-block"> Views all messages </a>
             <hr>
 
             <div class="profile">
@@ -50,7 +50,7 @@
               <h2> Jennifer Clardy
                 <small> Your profile is 30% complete</small>
               </h2>
-              <a  class="btn btn-rented secondary" ui-sref="dashboard.myProfile"> Complete Profile </a>
+              <a  class="btn btn-secondary btn-block" ui-sref="dashboard.myProfile"> Complete Profile </a>
             </div>
 
 
