incremental push of rooms api since it compiles and app runs

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -8,7 +8,6 @@
           <h2> You </h2>
 
           <div class="white-box buttons-box">
-           <!-- <a class="btn btn-rented primary" ui-sref="dashboard.myProperties.addNew">Post Available Property</a> -->
             <a class="btn btn-rented primary" ui-sref="dashboard.myRooms.addNew">Post Available Room</a>
             <a  class="btn btn-rented secondary">Post Looking</a>
           </div>
@@ -58,7 +57,7 @@
           </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
-          <h2 class="section-title"> Available Properties</h2>
+          <h2 class="section-title"> Available Rooms</h2>
           <div class="white-box available-rooms">
             <slick dots="true" class="slider row" slides-to-show="3" slides-to-scroll="3" responsive="dashboard.breakpoints.availableRooms"  init-onload="true" data="dashboard.availableRooms">
 
