--- a/client/app/dashboard/my-rooms/my.rooms.html
+++ b/client/app/dashboard/my-rooms/my.rooms.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div ui-view="">
-    <h2> Properties </h2>
+    <h2> Available Rooms </h2>
     <div class="row  my-rooms">
       <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 property" ng-repeat="property in dashboard.availableRooms">
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
