Remove profile completion progress from dashboard

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -37,19 +37,8 @@
             <hr>
 
             <div class="profile">
-              <div class="set-size">
-                <div class="pie-wrapper progress-30">
-                  <span class="label"><img src="../assets/fake/girl.jpg" class="img-circle" alt=""></span>
-                  <div class="pie">
-                    <div class="left-side half-circle"></div>
-                    <div class="right-side half-circle"></div>
-                  </div>
-                  <div class="shadow"></div>
-                </div>
-              </div>
-              <h2> Jennifer Clardy
-                <small> Your profile is 30% complete</small>
-              </h2>
+            <img src="../assets/fake/girl.jpg" class="img-circle" alt="">
+              <h2> Jennifer Clardy </h2>
               <a  class="btn btn-secondary btn-block" ui-sref="dashboard.myProfile"> Complete Profile </a>
             </div>
 
