Updated dashboard and 2nd navbar titles

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -8,7 +8,7 @@
           <h2> You </h2>
 
           <div class="white-box buttons-box">
-            <a class="btn btn-primary" ui-sref="dashboard.myProperties.addNew">Post Available Property</a>
+            <a class="btn btn-primary" ui-sref="dashboard.myProperties.addNew">Post Available Room</a>
             <a  class="btn btn-secondary" ui-sref="dashboard.myProfile.addNewLooking">Post Looking</a>
           </div>
 
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
-          <h2 class="section-title"> Available Properties</h2>
+          <h2 class="section-title"> Available Rooms</h2>
           <div class="white-box available-rooms">
             <slick dots="true" class="slider row" slides-to-show="3" slides-to-scroll="3" responsive="dashboard.breakpoints.availableRooms"  init-onload="true" data="dashboard.availableRooms">
 
@@ -75,7 +75,7 @@
             </slick>
           </div>
 
-          <h2 class="section-title"> Looking for a room</h2>
+          <h2 class="section-title"> Looking </h2>
           <div class="white-box looking-for-room">
             <slick dots="true" class="slider row" slides-to-show="2" slides-to-scroll="2" responsive="dashboard.breakpoints.lookingRoom" init-onload="true" data="dashboard.lookingRoom">
 
@@ -103,7 +103,7 @@
             </slick>
           </div>
 
-          <h2 class="section-title"> Around you</h2>
+          <h2 class="section-title"> Around You</h2>
 
           <div class="white-box around-you">
 
@@ -120,7 +120,7 @@
             </slick>
           </div>
 
-          <h2 class="section-title"> My listings</h2>
+          <h2 class="section-title"> My Posts</h2>
 
           <div class="white-box my-listings">
 
