adding aroundYou and looking dashboard states/views

--- a/client/index.html
+++ b/client/index.html
@@ -158,11 +158,15 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/dashboard/around/around.controller.js"></script>
+          <script src="app/dashboard/around/around.route.js"></script>
           <script src="app/dashboard/connections/my.connection.controller.js"></script>
           <script src="app/dashboard/connections/my.connection.route.js"></script>
           <script src="app/dashboard/dashboard.controller.js"></script>
           <script src="app/dashboard/favorites/my.favorites.controller.js"></script>
           <script src="app/dashboard/favorites/my.favorites.route.js"></script>
+          <script src="app/dashboard/looking/looking.controller.js"></script>
+          <script src="app/dashboard/looking/looking.route.js"></script>
           <script src="app/dashboard/messages/messages.controller.js"></script>
           <script src="app/dashboard/messages/messages.route.js"></script>
           <script src="app/dashboard/my-profile/add-address/new.address.ctrl.js"></script>
