refactored the sub-navbar to not dep on dashboard ..... refactored room code since viewing available rooms should not be under dashboard ... only creating my room listing should

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -9,7 +9,7 @@
 
           <div class="white-box buttons-box">
 
-            <a class="btn btn-rented primary" ui-sref="dashboard.myRooms.addNew">Post Available Room</a>
+            <a class="btn btn-rented primary" ui-sref="dashboard.myrooms.addNew">Post Available Room</a>
             <a  class="btn btn-rented secondary" ui-sref="dashboard.myProfile.addNewLooking">Post Looking</a>
           </div>
 
