--- a/client/index.html
+++ b/client/index.html
@@ -103,6 +103,7 @@
           <script src="app/landing/landing.module.js"></script>
           <script src="components/blocks/logger/logger.module.js"></script>
           <script src="components/blocks/exception/exception.module.js"></script>
+          <script src="app/rooms/rooms.module.js"></script>
 
           <!-- injector:js -->
           <script src="app/account/account.routes.js"></script>
@@ -202,10 +203,9 @@
           <script src="app/dashboard/my-properties/property.details/property.details.route.js"></script>
           <script src="app/dashboard/my-rooms/add.new.room/add.new.room.controller.js"></script>
           <script src="app/dashboard/my-rooms/add.new.room/add.new.room.route.js"></script>
-          <script src="app/dashboard/my-rooms/my.rooms.controller.js"></script>
-          <script src="app/dashboard/my-rooms/my.rooms.route.js"></script>
           <script src="app/landing/landing.controller.js"></script>
           <script src="app/prerender.controller.js"></script>
+          <script src="app/rooms/rooms.controller.js"></script>
           <script src="components/blocks/exception/exception-handler.js"></script>
           <script src="components/blocks/exception/exception.js"></script>
           <script src="components/blocks/logger/logger.js"></script>
@@ -231,6 +231,7 @@
           <script src="components/core/data/vehicle.js"></script>
           <script src="components/layout/footer/footer.controller.js"></script>
           <script src="components/layout/navbar/navbar.controller.js"></script>
+          <script src="components/layout/navbar/sub-navbar.controller.js"></script>
           <script src="components/widgets/adress-autocomplete/adress-autocomplete.directive.js"></script>
           <script src="components/widgets/confirm-password/confirm.password.directive.js"></script>
           <script src="components/widgets/fileupload/fileupload.js"></script>
