fix on profile edit

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -9,8 +9,8 @@
 
           <div class="white-box buttons-box">
 
-            <a class="btn btn-rented primary" ui-sref="dashboard.myrooms.addNew">Post Available Room</a>
-            <a  class="btn btn-rented secondary" ui-sref="dashboard.myProfile.addNewLooking">Post Looking</a>
+            <a class="btn btn-primary" ui-sref="dashboard.myrooms.addNew">Post Available Room</a>
+            <a  class="btn btn-secondary" ui-sref="dashboard.myProfile.addNewLooking">Post Looking</a>
           </div>
 
           <div class="white-box profile-sidebar">
