--- a/client/app/dashboard/my-profile/edit-profile/edit.profile.html
+++ b/client/app/dashboard/my-profile/edit-profile/edit.profile.html
@@ -1,4 +1,4 @@
-<div class="container edit-profile" cg-busy="{promise:myProfile.initializeData.$promise, message:'Loading Your Profile', delay:50}">
+<div class="container edit-profile" cg-busy="{promise:editProfile.initializeData.$promise, message:'Loading Your Profile', delay:50}">
   <div ui-view="">
     <div class="page-header">
       <h2> Personal Data </h2>
@@ -6,15 +6,15 @@
     <div class="white-box">
       <div class="row about-me">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <form class="form" name="personalDataForm" ng-submit="myProfile.changePersonalData(personalDataForm)" novalidate>
+          <form class="form" name="personalDataForm" ng-submit="editProfile.changePersonalData(personalDataForm)" novalidate>
             <div class="row">
 
               <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                 <div class="picture text-center">
-                  <img ng-src="api/images{{myProfile.me.profileImage}}" class="img-circle">
-                  <input type="file" nv-file-select uploader="myProfile.uploader" id="fileUpload"/>
+                  <img ng-src="api/images{{editProfile.me.profileImage}}" class="img-circle">
+                  <input type="file" nv-file-select uploader="editProfile.uploader" id="fileUpload"/>
                   <ul>
-                    <li ng-repeat="item in myProfile.uploader.queue">
+                    <li ng-repeat="item in editProfile.uploader.queue">
                       <button class="bubble" ng-click="item.upload()"><i class="fa fa-upload"></i></button>
                     </li>
                   </ul>
@@ -24,15 +24,15 @@
               <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
                 <div class="form-group">
                   <label>First Name</label>
-                  <input class="form-control" type="text" id="firstname" name="firstname" ng-model="myProfile.tempMe.firstname"/>
+                  <input class="form-control" type="text" id="firstname" name="firstname" ng-model="editProfile.tempMe.firstname"/>
                 </div>
                 <div class="form-group">
                   <label>Last Name</label>
-                  <input class="form-control" type="text" id="lastname" name="lastname" ng-model="myProfile.tempMe.lastname"/>
+                  <input class="form-control" type="text" id="lastname" name="lastname" ng-model="editProfile.tempMe.lastname"/>
                 </div>
                 <div class="form-group">
                   <label> About Me</label>
-                  <textarea class="form-control" ng-model="myProfile.tempMe.aboutMe" c></textarea>
+                  <textarea class="form-control" ng-model="editProfile.tempMe.aboutMe" c></textarea>
                 </div>
               </div>
             </div>
@@ -48,26 +48,26 @@
     <div class="white-box">
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <form class="form" name="personalDataForm" ng-submit="myProfile.changePersonalData(personalDataForm)" novalidate>
+          <form class="form" name="personalDataForm" ng-submit="editProfile.changePersonalData(personalDataForm)" novalidate>
 
             <div class="form-group">
               <label>University:</label>
-              <input class="form-control" type="text" id="University" name="University" ng-model="myProfile.education[0].educationCenterName"/>
+              <input class="form-control" type="text" id="University" name="University" ng-model="editProfile.educations.education[0].educationCenterName"/>
             </div>
 
             <div class="form-group">
               <label>Major</label>
-              <input class="form-control" type="text" id="major" name="major" ng-model="myProfile.education[0].major"/>
+              <input class="form-control" type="text" id="major" name="major" ng-model="editProfile.educations.education[0].major"/> 
             </div>
 
             <div class="form-group">
               <label>StartDate</label>
-              <input class="form-control" type="text" id="StartDate" name="StartDate" ng-model="myProfile.education[0].startDate"/>
+              <input class="form-control" type="text" id="StartDate" name="StartDate" ng-model="editProfile.educations.education[0].startDate"/>
             </div>
 
             <div class="form-group">
               <label>EndDate</label>
-              <input class="form-control" type="text" id="EndDate" name="EndDate" ng-model="myProfile.education[0].endDate"/>
+              <input class="form-control" type="text" id="EndDate" name="EndDate" ng-model="editProfile.educations.education[0].endDate"/>
             </div>
 
             <input type="submit" class="btn" value="Save">
@@ -83,40 +83,40 @@
     <div class="white-box">
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <form class="form" name="personalDataForm" ng-submit="myProfile.changePersonalData(personalDataForm)" novalidate>
+          <form class="form" name="personalDataForm" ng-submit="editProfile.changePersonalData(personalDataForm)" novalidate>
             <div class="form-group">
               <label>Phone Number</label>
-              <input class="form-control" type="text" id="phone" name="phone" ui-mask="999-999-9999" ng-model="myProfile.tempMe.phone"/>
+              <input class="form-control" type="text" id="phone" name="phone" ui-mask="999-999-9999" ng-model="editProfile.tempMe.phone"/>
             </div>
 
             <div class="form-group">
               <label>Address</label>
-              <input class="form-control" type="text" ng-model="myProfile.address[0].streetAddress"/>
+              <input class="form-control" type="text" ng-model="editProfile.address[0].streetAddress"/>
             </div>
 
             <div class="form-group">
               <label>Number</label>
-              <input class="form-control" type="text" ng-model="myProfile.address[0].streetNumeric"/>
+              <input class="form-control" type="text" ng-model="editProfile.address[0].streetNumeric"/>
             </div>
 
             <div class="form-group">
               <label>City</label>
-              <input class="form-control" type="text" ng-model="myProfile.address[0].city">
+              <input class="form-control" type="text" ng-model="editProfile.address[0].city">
             </div>
 
             <div class="form-group">
               <label>State</label>
-              <input class="form-control" type="text" ng-model="myProfile.address[0].state">
+              <input class="form-control" type="text" ng-model="editProfile.address[0].state">
             </div>
 
             <div class="form-group">
               <label>Address</label>
-              <input class="form-control" type="text" ng-model="myProfile.address[0].zip">
+              <input class="form-control" type="text" ng-model="editProfile.address[0].zip">
             </div>
 
             <div class="form-group">
               <label>Living here since</label>
-              <input type="text" class="form-control" ng-model="myProfile.address[0].startDate">
+              <input type="text" class="form-control" ng-model="editProfile.address[0].startDate">
             </div>
 
             <input type="submit" class="btn" value="Save">
