Add edit education data and icon for fa-shower

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -67,7 +67,7 @@
                 <ul class="specs">
                   <li><i class="fa fa-bed"></i> {{room.kind}}</li>
                   <li><i class="fa fa-users"></i> {{room.roommates}} roommates</li>
-                  <li><i class="fa fa-bed"></i> {{room.bathroom}} bathroom</li>
+                  <li><i class="fa fa-shower"></i> {{room.bathroom}} bathroom</li>
                   <li><i class="fa fa-calendar"></i> {{room.availability_date | date }}</li>
                 </ul>
               </div>
