--- a/client/app/dashboard/my-profile/edit-profile/edit.profile.html
+++ b/client/app/dashboard/my-profile/edit-profile/edit.profile.html
@@ -34,6 +34,10 @@
                   <label> About Me</label>
                   <textarea class="form-control" ng-model="editProfile.tempMe.aboutMe" c></textarea>
                 </div>
+                <div class="form-group">
+                  <label> Phone Number</label>
+                  <input class="form-control" type="text" id="phone" name="phone" ng-model="editProfile.tempMe.phone" ui-mask="999-999-9999">
+                </div>
               </div>
             </div>
             <input type="submit" class="btn" value="Save">
@@ -48,65 +52,102 @@
     <div class="white-box">
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <form class="form" name="educationDataForm" ng-submit="editProfile.saveEducationData(educationDataForm)" novalidate>
+          <label for="educationCenterName">Education centre name</label>
+          <input type="text" id="educationCenterName" name="educationCenterName" class="form-control" ng-model="editProfile.tempEducation.educationCenterName"/>
 
-            <div class="form-group">
-              <label>University:</label>
-              <input class="form-control" type="text" id="University" name="University" ng-model="editProfile.educations.education[0].educationCenterName"/>
+          <label for="type">Type</label>
+          <select id="type" class="form-control" data-ng-model="editProfile.tempEducation.type">
+            <option value="university">University</option>
+            <option value="trade">Trade</option>
+            <option value="military">Military</option>
+          </select>
+
+          <!--<label for="graduation">Graduated</label>-->
+          <!--<input type="checkbox" ng-model="editProfile.tempEducation.graduation" id="graduation" class="form-control" name="graduation"/>-->
+          <br/>
+          <label for="graduation">Graduated?</label><br/>
+          <label class="radio-inline"><input type="radio" name="graduation" id="graduation" ng-model="editProfile.tempEducation.graduation" value="1">Yes</label>
+          <label class="radio-inline"><input type="radio" name="graduation" id="graduation" ng-model="editProfile.tempEducation.graduation" value="0">No</label>
+
+          <div class="row">
+            <div class="col-md-4"><br/>
+              <label for="start">Start date</label>
+              <p class="input-group">
+                <input type="text" id="start" class="form-control" datepicker-popup="{{format}}" ng-model="editProfile.tempEducation.startDate" is-open="datePickers.startDate" close-text="Close" />
+                <span class="input-group-btn">
+                <button type="button" class="btn" ng-click="open($event,'startDate')"><i class="glyphicon glyphicon-calendar"></i></button>
+                </span>
+              </p>
             </div>
-
-            <div class="form-group">
-              <label>Major</label>
-              <input class="form-control" type="text" id="major" name="major" ng-model="editProfile.educations.education[0].major"/> 
+            <div class="col-md-4"><br/>
+              <label for="end">End date</label>
+              <p class="input-group">
+                <input type="text" id="end" class="form-control" datepicker-popup="{{format}}" ng-model="editProfile.tempEducation.endDate" is-open="datePickers.endDate"  close-text="Close" />
+                <span class="input-group-btn">
+                  <button type="button" class="btn btn-default" ng-click="open($event,'endDate')"><i class="glyphicon glyphicon-calendar"></i></button>
+                </span>
+              </p>
             </div>
+            <div class="col-md-4" ng-if="editProfile.tempEducation.graduation==1"><br/>
+              <label for="graduationDate">Graduation date</label>
+              <p class="input-group">
+                <input  type="text" id="graduationDate" class="form-control" datepicker-popup="{{format}}" ng-model="editProfile.tempEducation.graduationDate" is-open="datePickers.graduationDate"  close-text="Close" />
+                <span class="input-group-btn">
+                <button type="button" class="btn" ng-click="open($event,'graduationDate')"><i class="glyphicon glyphicon-calendar"></i></button>
+                </span>
+              </p>
+            </div><div class="col-md-4" ng-if="editProfile.tempEducation.graduation==0"></div>    </div>
 
-            <div class="form-group">
-              <label>StartDate</label>
-              <input class="form-control" type="text" id="StartDate" name="StartDate" ng-model="editProfile.educations.education[0].startDate"/>
-            </div>
+            <label for="major">Major</label>
+            <input type="text" ng-model="editProfile.tempEducation.major" id="major" class="form-control" name="major"/>
 
-            <div class="form-group">
-              <label>EndDate</label>
-              <input class="form-control" type="text" id="EndDate" name="EndDate" ng-model="editProfile.educations.education[0].endDate"/>
-            </div>
+            <label for="degreeType">Degree type</label>
+            <select id="degreeType" class="form-control" data-ng-model="editProfile.tempEducation.degreeType">
+              <option value="undergraduate">Undergraduate</option>
+              <option value="graduate">Graduate</option>
+              <option value="doctorate">Doctorate</option>
+              <option value="post-doctorate">Post-doctorate</option>
+            </select>
 
-            <input type="submit" class="btn" value="Save">
-          </form>
+            <br/>
+
+            <button class="btn btn-primary" ng-click="editProfile.saveEducation(editProfile.tempEducation)">Save changes</button>
+          </div>
+          {{editProfile.tempEducation | json}}
         </div>
       </div>
-    </div>
 
 
-    <div class="page-header">
-      <h2> Address Data </h2>
-    </div>
-    <div class="white-box">
-      <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <label for="streetAddress">Address</label>
-          <input type="text" id="streetAddress" name="streetAddress" class="form-control"  placeholder="Street name" ng-model="editProfile.tempAddress.streetAddress"/>
+      <div class="page-header">
+        <h2> Address Data </h2>
+      </div>
+      <div class="white-box">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <label for="streetAddress">Address</label>
+            <input type="text" id="streetAddress" name="streetAddress" class="form-control"  placeholder="Street name" ng-model="editProfile.tempAddress.streetAddress"/>
 
-          <label for="streetNumber">Number</label>
-          <input type="number" id="streetNumber" name="streetNumber" class="form-control"  placeholder="Street number" ng-model="editProfile.tempAddress.streetNumeric"/>
-          
-          <label for="zip">Zip code</label>
-          <input type="number" id="zip" name="zip" class="form-control"  placeholder="zip code" ng-model="editProfile.tempAddress.zip"/>
+            <label for="streetNumber">Number</label>
+            <input type="number" id="streetNumber" name="streetNumber" class="form-control"  placeholder="Street number" ng-model="editProfile.tempAddress.streetNumeric"/>
 
-          <label for="country">Country</label>
-          <input type="text" id="country" name="country" class="form-control"  placeholder="country" ng-model="editProfile.tempAddress.country"/>
+            <label for="zip">Zip code</label>
+            <input type="number" id="zip" name="zip" class="form-control"  placeholder="zip code" ng-model="editProfile.tempAddress.zip"/>
 
-          <label for="city">City</label>
-          <input type="text" id="city" name="city" class="form-control"  placeholder="city" ng-model="editProfile.tempAddress.city"/>
+            <label for="country">Country</label>
+            <input type="text" id="country" name="country" class="form-control"  placeholder="country" ng-model="editProfile.tempAddress.country"/>
 
-          <label for="city">State</label>
-          <input type="text" id="state" name="state" class="form-control"  placeholder="state" ng-model="editProfile.tempAddress.state"/>
+            <label for="city">City</label>
+            <input type="text" id="city" name="city" class="form-control"  placeholder="city" ng-model="editProfile.tempAddress.city"/>
 
-          <label for="apt">Apt</label>
-          <input type="number" id="apt" name="apt" class="form-control"  placeholder="apt" ng-model="editProfile.tempAddress.apt"/><br/>
+            <label for="city">State</label>
+            <input type="text" id="state" name="state" class="form-control"  placeholder="state" ng-model="editProfile.tempAddress.state"/>
 
-          <label for="present">Present?</label><br/>
-          <label class="radio-inline"><input type="radio" name="present" id="present" ng-model="editProfile.tempAddress.present" value="1">Yes</label>
-          <label class="radio-inline"><input type="radio" name="present"  ng-model="editProfile.tempAddress.present" value="0">No</label><br/><br/>
+            <label for="apt">Apt</label>
+            <input type="number" id="apt" name="apt" class="form-control"  placeholder="apt" ng-model="editProfile.tempAddress.apt"/><br/>
+
+            <label for="present">Present?</label><br/>
+            <label class="radio-inline"><input type="radio" name="present" id="present" ng-model="editProfile.tempAddress.present" value="1">Yes</label>
+            <label class="radio-inline"><input type="radio" name="present"  ng-model="editProfile.tempAddress.present" value="0">No</label><br/><br/>
 
           <!-- <label for="about">About me</label>
           <textarea name="about" id="about" cols="30" rows="5" placeholder="about me" data-ng-model="editProfile.tempAddress.aboutMe"  class="form-control" ></textarea> -->
